2010-10-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7
	* Fixed bug #15899: htmlArea RTE: Editing area collapsed in Chrome 7

2010-10-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #15884: htmlArea RTE: Remove class Ext.ux.StatusBar
	* Added feature #15885: htmlArea RTE: Add option to remove typographical punctuation (Thanks to Daniel Schwarzloh)

2010-10-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #15879: htmlArea RTE: Use TYPO3 ExtJS API for RTE notification dialogues
	* Fixed bug #15880: htmlArea RTE: Context menu not working in TYPO3 4.4.3 and 4.5-dev

2010-09-30  Francois Suter  <francois@typo3.org>

	* Fixed bug #15639: Scheduler: Add missing classes and interface to autoload registry (Thanks to Marcus Krause)
	* Fixed bug #14997: Performance: t3lib_db->escapeStrForLike() is using preg_replace, which is not necessary (Thanks to Caspar Stuebs and Marcus Krause)
	* Fixed bug #15873: Scheduler: Links on action icons should not be underlined

2010-09-30  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #12889: fe_adminLib.inc usages deprecated function split() (Thanks to Steffen Kamper and Ismaël Bidau)
	* Fixed bug #15872: Size definition in to restrictive, selector prevents other stylesheet to overwrite icon size (Thanks to Steffen Ritter)

2010-09-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7
	* Fixed bug #15863: htmlArea RTE: Initialization never completes in Google Chrome 7

2010-09-29  Steffen Kamper  <steffen@typo3.org>

	* Added feature #15745: Integrate generic notification methods to show windows and dialogs based on ExtJS

2010-09-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #15075: [Install] make a pre-check for required php-extensions (Thanks to Jigal van Hemert)

2010-09-28  Steffen Kamper  <steffen@typo3.org>
