@@ -1,3 +1,7 @@
+2010-10-05  Steffen Gebert  <steffen@steffen-gebert.de>
+
+	* Fixed bug #15874: Provide unit tests for t3lib_div::dirname (Thanks to Oliver Klee)
+
 2010-10-05  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Follow-up to bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7
